--- a/PartidosMetegol/tsconfig.json
+++ b/PartidosMetegol/tsconfig.json
@@ -10,6 +10,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "skipLibCheck": true,
+    "keyofStringsOnly": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
